# aflow

./: .clang-format  .clang-tidy  .clang-tidy-fix  .clang-tidy-lint  .gitignore  .gitmodules  README.md
.github/: CONTRIBUTING.md
docs/: README.md  aflow.doxy  aflow.doxy.in  doxygen_footer.html.in
docs/extra_pages/: extra.dox
scripts/: README.md  format-changed.sh  tidy-changed.sh
scripts/dev/: requirements.txt
src/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.example.json  aflow.cpp  aflow.h  aflow_aconvasp.cpp  aflow_aconvasp_main.cpp  aflow_aflowrc.cpp  aflow_aflowrc.h  aflow_defs.h  aflow_init.cpp  aflow_init.h  aflow_xhost.cpp  aflow_xhost.h  aflow_xthread.cpp  aflow_xthread.h  config.cpp.in  config.h.in  external_unit_tests.py  vcpkg.json
src/AUROSTD/: CMakeLists.txt  apack.c  aurostd.h  aurostd_argv.cpp  aurostd_argv.h  aurostd_automatic_template.h  aurostd_data.cpp  aurostd_defs.h  aurostd_hash.cpp  aurostd_hash.h  aurostd_incbin_defs.h  aurostd_main.cpp  aurostd_math.cpp  aurostd_math.h  aurostd_time.cpp  aurostd_time.h  aurostd_type_traits.tpp  aurostd_xcombos.cpp  aurostd_xcombos.h  aurostd_xcomplex.cpp  aurostd_xcomplex.h  aurostd_xerror.cpp  aurostd_xerror.h  aurostd_xfile.cpp  aurostd_xfile.h  aurostd_xfit.cpp  aurostd_xfit.h  aurostd_xhttp.cpp  aurostd_xhttp.h  aurostd_xmatrix.cpp  aurostd_xmatrix.h  aurostd_xoption.cpp  aurostd_xoption.h  aurostd_xparser.cpp  aurostd_xparser.h  aurostd_xparser_json.cpp  aurostd_xparser_json.h  aurostd_xparser_json.tpp  aurostd_xplotter.cpp  aurostd_xplotter.h  (+11 more)
src/DATA/PARAM/: LDAU.json  elements.json
src/DATA/PROTO/: legacy_data.json  prepare_proto.py
src/DATA/PSPOTS/: aflow_xpseudopotentials_data.json  pseudopotential_references.json
src/DATA/README/: README_AFLOW.TXT  README_AFLOW_ACONVASP.TXT  README_AFLOW_AFLOWRC.TXT  README_AFLOW_APL.TXT  README_AFLOW_GFA.TXT  README_AFLOW_NHULL.TXT  README_AFLOW_PFLOW.TXT  README_AFLOW_SCRIPTING.TXT  README_AFLOW_VERSIONS_HISTORY.TXT
src/DATA/SCRIPTS/: GNUPLOT_FUNCS_plotbz.sh  MATLAB_FUNCS_param.mat  MATLAB_FUNCS_plotband.mat  aflow_nhull_jupyter.json  aflow_nhull_jupyter_plotter.py  aflow_nhull_python.py  aflowlib_webapp_bands.js
src/DATA/TEST/: DOSCAR.txt  EIGENVAL.txt  KPOINTS.txt  MnPdPt_hull.json  OUTCAR.txt  OUTCAR_dielectric.txt  QMVASP.txt  VASPRUNXML.txt  cumulants_test.tar.xz  unit_test.json
src/aflowlib/: aflowlib.h  aflowlib_database.cpp  aflowlib_database.h  aflowlib_entry_loader.cpp  aflowlib_entry_loader.h  aflowlib_libraries.cpp  aflowlib_libraries.h  aflowlib_libraries_scrubber.cpp  aflowlib_libraries_scrubber.h  aflowlib_web_interface.cpp  aflowlib_web_interface.h  aflowlib_web_outreach.cpp  aflowlib_web_outreach.h
src/contrib/: aflow_contrib_cormac.cpp  aflow_contrib_shidong_cluster_expansion.cpp  aflow_contrib_shidong_cluster_expansion.h  aflow_contrib_wahyu.cpp
src/flow/: aflow_avasp.cpp  aflow_avasp.h  aflow_bader.cpp  aflow_bader.h  aflow_estructure.cpp  aflow_figures.cpp  aflow_figures.h  aflow_iaims.cpp  aflow_ialien.cpp  aflow_ifrozsl.cpp  aflow_ivasp.cpp  aflow_ivasp.h  aflow_kaims.cpp  aflow_kalien.cpp  aflow_kbin.cpp  aflow_kvasp.cpp  aflow_kvasp.h  aflow_machl.cpp  aflow_mix.cpp  aflow_mix_experiments.cpp  aflow_modules.cpp  aflow_nomix.cpp  aflow_oaims.cpp  aflow_ovasp.cpp  aflow_pflow.h  aflow_pflow_funcs.cpp  aflow_pflow_print.cpp  aflow_plotter.cpp  aflow_support_types.h  aflow_xclasses.cpp  aflow_xclasses.h  aflow_xpseudopotentials.cpp  aflow_xpseudopotentials_data.cpp  aflow_xvaspin.h
src/interfaces/: README_AFLOW_SYMBOLIC.TXT  aflow_matlab.cpp  aflow_pthreads.cpp  aflow_pthreads.h  aflow_qsub.cpp  aflow_sqlite.cpp  aflow_sqlite.h  aflow_symbolic.cpp  aflow_symbolic.h  aflow_voro.cpp  aflow_voro.h
src/modules/: CMakeLists.txt
src/modules/AEL/: aflow_ael_elastic_fit.cpp  aflow_ael_elasticity.cpp  aflow_ael_elasticity.h  aflow_ael_get_stress.cpp
src/modules/AGL/: aflow_agl_debye.cpp  aflow_agl_debye.h  aflow_agl_electronic.cpp  aflow_agl_eqn_state.cpp  aflow_agl_get_ev.cpp  aflow_agl_hugoniot.cpp  aflow_agl_plot_write.cpp  aflow_agl_polynomial.cpp  aflow_agl_rungibbs.cpp  aflow_agl_thermal.cpp
src/modules/APL/: aflow_aapl_cluster.cpp  aflow_aapl_ifcs.cpp  aflow_aapl_tcond.cpp  aflow_apl.h  aflow_apl_atomic_disp.cpp  aflow_apl_doscalc.cpp  aflow_apl_fccalc.cpp  aflow_apl_kphonons.cpp  aflow_apl_pdisc.cpp  aflow_apl_phoncalc.cpp  aflow_apl_qmesh.cpp  aflow_apl_supercell.cpp  aflow_apl_thermalpc.cpp
src/modules/CCE/: aflow_cce.cpp  aflow_cce.h
src/modules/COMPARE/: aflow_compare_structure.cpp  aflow_compare_structure.h  aflow_compare_structure_function.cpp
src/modules/CUMULANTS/: aflow_cumulants.cpp  aflow_cumulants.h
src/modules/GFA/: aflow_gfa.cpp  aflow_gfa.h
src/modules/HULL/: aflow_chull.cpp  aflow_chull.h  aflow_nhull.cpp  aflow_nhull.h  aflow_nhull_entry.cpp  aflow_nhull_entry.h  aflow_nhull_facet.cpp  aflow_nhull_facet.h  aflow_nhull_latex.cpp  aflow_nhull_latex.h  aflow_nhull_stats.cpp  aflow_nhull_stats.h  aflow_nhull_util.cpp  aflow_nhull_util.h
src/modules/POCC/: aflow_pocc.cpp  aflow_pocc.h  aflow_pocc_ael_agl.cpp  aflow_pocc_apl.cpp  aflow_pocc_old.cpp  aflow_pocc_old.h  aflow_pocc_qha.cpp  aflow_pocc_thermo.cpp
src/modules/PROTOTYPES/: aflow_anrl.cpp  aflow_anrl.h  aflow_xproto.cpp  aflow_xprototype.cpp
src/modules/QCA/: aflow_qca.cpp  aflow_qca.h
src/modules/QHA/: aflow_qha.cpp
src/modules/SYM/: aflow_spacegroup.cpp  aflow_spacegroup.h  aflow_symmetry.cpp  aflow_symmetry.h  aflow_symmetry_spacegroup.cpp  aflow_symmetry_spacegroup.h  aflow_symmetry_spacegroup_ITC_library.cpp  aflow_symmetry_spacegroup_functions.cpp  aflow_wyckoff.cpp  aflow_wyckoff.h
src/structure/: aflow_defects.cpp  aflow_defects.h  aflow_lattice.cpp  aflow_lattice.h  aflow_surface.cpp  aflow_surface.h  aflow_xatom.cpp  aflow_xatom.h  aflow_xelement.cpp  aflow_xstructure.cpp  aflow_xstructure.h  aflow_xstructure_parser.cpp
src/test/: CMakeLists.txt  aflow_mock_json.h  aflow_test.cpp  aflow_test.h  aflow_unit_test.cpp  aflow_unit_test.h
